Sidebar shows number of guests from model

--- a/2selectDish.html
+++ b/2selectDish.html
@@ -36,7 +36,7 @@
         <div class="col-md-12">   
           <div class="col-md-8">
             <p>People</p>
-            <div id="numberOfGuests">1</div>
+            <div id="exampleView"><span id="numberOfGuests"></span></div>
             <br>
           </div>
           <div class="col-md-4">  
